<resources>
    <string name="app_name">BikeShare</string>
    <string name="text_last_added">Last added</string>
    <string name="text_what_bike">Your Bike</string>
    <string name="text_where_to">Your current Location</string>
    <string name="info_user_delete">(Long click on ride to delete)</string>
    <string name="button_add_ride">Add Ride</string>
    <string name="button_end_ride">End Ride</string>
    <string name="list_rides_button">List Rides</string>
    <string name="info_end_ride">Use same bike name of start</string>
    <string name="bike_name">Bike name</string>
    <string name="start_ride">Start ride</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="end_ride">End ride</string>
    <string name="time">Time:</string>
</resources>
