<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/what_bike_list"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/bike_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/start_ride_list"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/start_ride" />

        <TextView
            android:id="@+id/end_ride_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_ride" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/time"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/date_start"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/start_date"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"/>


        <TextView
            android:id="@+id/date_end"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/end_date"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"/>
    </LinearLayout>

</LinearLayout>