<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/api_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        tools:text="(API level)" />

    <Button
        android:id="@+id/main_add_ride_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/button_add_ride"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/main_end_ride_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_red_light"
        android:padding="10dp"
        android:text="@string/button_end_ride"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/main_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_dark"
        android:padding="10dp"
        android:text="@string/list_rides_button"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/info_user_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/info_user_delete" />

    <LinearLayout
        android:id="@+id/main_header_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="Bike"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start_ride_list"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="Start"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/end_ride_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="End"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bike_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>