<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginRight="5dp"
            android:paddingTop="30dp"
            android:text="@string/text_what_bike"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_end_ride"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:theme="@style/MatchSpinnerTheme" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_where_to"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/end_where_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine"
            android:lines="2"
            android:text="Loading..." />
    </LinearLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/end_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </FrameLayout>

    <Button
        android:id="@+id/end_button"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/button_end_ride"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>